--- a/JoTakip - Bilgisayar Stok Takip Sistemi/Business/Business.csproj
+++ b/JoTakip - Bilgisayar Stok Takip Sistemi/Business/Business.csproj
@@ -54,13 +54,14 @@
     <Compile Include="Abstract\ILoginService.cs" />
     <Compile Include="Abstract\IPersonalService.cs" />
     <Compile Include="Abstract\IProductService.cs" />
+    <Compile Include="Abstract\IReportService.cs" />
     <Compile Include="Abstract\ISalesmanService.cs" />
     <Compile Include="Abstract\IWarehouseService.cs" />
     <Compile Include="Concrete\DepartmentManager.cs" />
     <Compile Include="Concrete\LoginManager.cs" />
     <Compile Include="Concrete\PersonalManager.cs" />
     <Compile Include="Concrete\ProductManager.cs" />
-    <Compile Include="Concrete\SalesmanManager.cs" />
+    <Compile Include="Concrete\UserManager.cs" />
     <Compile Include="Concrete\WarehouseManager.cs" />
     <Compile Include="IocUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
