--- a/JoTakip - Bilgisayar Stok Takip Sistemi/Business/Business.csproj
+++ b/JoTakip - Bilgisayar Stok Takip Sistemi/Business/Business.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Concrete\WarehouseManager.cs" />
     <Compile Include="IocUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Session.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
