--- a/JoTakip - Bilgisayar Stok Takip Sistemi/Business/Business.csproj
+++ b/JoTakip - Bilgisayar Stok Takip Sistemi/Business/Business.csproj
@@ -57,12 +57,14 @@
     <Compile Include="Abstract\IReportService.cs" />
     <Compile Include="Abstract\IUserService.cs" />
     <Compile Include="Abstract\IWarehouseService.cs" />
+    <Compile Include="Abstract\IWasteProductService.cs" />
     <Compile Include="Concrete\DepartmentManager.cs" />
     <Compile Include="Concrete\LoginManager.cs" />
     <Compile Include="Concrete\PersonalManager.cs" />
     <Compile Include="Concrete\ProductManager.cs" />
     <Compile Include="Concrete\UserManager.cs" />
     <Compile Include="Concrete\WarehouseManager.cs" />
+    <Compile Include="Concrete\WasteProductManager.cs" />
     <Compile Include="IocUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Session.cs" />
