--- a/JoTakip - Bilgisayar Stok Takip Sistemi/DataAccess/DataAccess.csproj
+++ b/JoTakip - Bilgisayar Stok Takip Sistemi/DataAccess/DataAccess.csproj
@@ -53,12 +53,14 @@
     <Compile Include="Abstract\IPersonalDal.cs" />
     <Compile Include="Abstract\IProductDal.cs" />
     <Compile Include="Abstract\IUserDal.cs" />
+    <Compile Include="Abstract\IWasteProductDal.cs" />
     <Compile Include="Concrete\DepartmentDal.cs" />
     <Compile Include="Concrete\EntityRepositoryBase.cs" />
     <Compile Include="Concrete\PersonalDal.cs" />
     <Compile Include="Concrete\ProductDal.cs" />
     <Compile Include="Concrete\SqlContext.cs" />
     <Compile Include="Concrete\UserDal.cs" />
+    <Compile Include="Concrete\WasteProductDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
