--- a/JoTakip - Bilgisayar Stok Takip Sistemi/UI/packages.config
+++ b/JoTakip - Bilgisayar Stok Takip Sistemi/UI/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DoddleReport" version="1.5.2.0" targetFramework="net461" />
+  <package id="DoddleReport.iTextSharp" version="1.5.2.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Fody" version="1.29.2" targetFramework="net461" developmentDependency="true" />
   <package id="iTextSharp" version="5.5.12" targetFramework="net461" />
