--- a/JoTakip - Bilgisayar Stok Takip Sistemi/UI/App.config
+++ b/JoTakip - Bilgisayar Stok Takip Sistemi/UI/App.config
@@ -17,4 +17,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="itextsharp" publicKeyToken="8354ae6d2174ddca" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.5.12.0" newVersion="5.5.12.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
